---
source: compiler-core/src/javascript/tests/tuples.rs
expression: "\npub const a = \"Hello\"\npub const b = 1\npub const c = 2.0\npub const e = #(\"bob\", \"dug\")\n        "
---
----- SOURCE CODE

pub const a = "Hello"
pub const b = 1
pub const c = 2.0
pub const e = #("bob", "dug")
        

----- COMPILED JAVASCRIPT
export const a = "Hello";

export const b = 1;

export const c = 2.0;

export const e = ["bob", "dug"];
